force-app/main/default/objects/Event_Log__c/Event_Log__c.object-meta.xml
<CustomObject>
    <label>Event Log</label>
    <nameField>
        <displayFormat>EL-{0000}</displayFormat>
        <label>Event Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>