force-app/main/default/objects/Event_Log__c/fields/Camera_Details__c.field-meta.xml
<CustomField>
    <fullName>Camera_Details__c</fullName>
    <label>Camera Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>