force-app/main/default/objects/Event_Log__c/fields/co_ppm__c.field-meta.xml
<CustomField>
    <fullName>co_ppm__c</fullName>
    <label>co ppm</label>
    <length>128</length>
    <type>Text</type>
</CustomField>