force-app/main/default/objects/Event_Log__c/fields/Event_Log_Id__c.field-meta.xml
<CustomField>
    <fullName>Event_Log_Id__c</fullName>
    <externalId>true</externalId>
    <label>Event Log Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>