force-app/main/default/objects/Event_Log__c/fields/Fire_Detected__c.field-meta.xml
<CustomField>
    <fullName>Fire_Detected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fire Detected?</label>
    <type>Checkbox</type>
</CustomField>