force-app/main/default/objects/Event_Log__c/fields/Sensor_Id__c.field-meta.xml
<CustomField>
    <fullName>Sensor_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sensor Id</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Event Logs</relationshipLabel>
    <relationshipName>Event_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>