force-app/main/default/objects/Event_Log__c/fields/Smoke_ppm__c.field-meta.xml
<CustomField>
    <fullName>Smoke_ppm__c</fullName>
    <label>Smoke ppm</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>