force-app/main/default/objects/Event_Log__c/fields/Temperature_Celsius__c.field-meta.xml
<CustomField>
    <fullName>Temperature_Celsius__c</fullName>
    <label>Temperature Celsius</label>
    <length>128</length>
    <type>Text</type>
</CustomField>