force-app/main/default/objects/Event_Log__c/recordTypes/Camera_Systems.recordType-meta.xml
<RecordType>
    <fullName>Camera_Systems</fullName>
    <active>true</active>
    <label>Camera Systems</label>
</RecordType>