force-app/main/default/objects/Event_Log__c/recordTypes/Fire_Sensor.recordType-meta.xml
<RecordType>
    <fullName>Fire_Sensor</fullName>
    <active>true</active>
    <label>Fire Sensor</label>
</RecordType>